# agent-os

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  opencode.json  pyproject.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
dashboard/: .env.example  AUTHENTICATION.md  TESTING_REPORT.md  agentic-software-boutique.service  alerts.py  approvals.py  backup.py  chat_store.py  checkpoints.py  config.py  cron_adapter.py  cron_loop.py  curator_loop.py  diagnose.sh  headroom_learn.py  headroom_memory.py  headroom_sidecar.py  health.py  hermes_adapter.py  kanban.py  kanban_feedback.py  log.py  main.py  memory.py  metrics.py  nginx.conf  ops_workflows.py  ponytail.py  requirements.txt  restore.sh  runner.py  skill_emitter.py  start.sh  token_accounting.py  tracing.py  utils.py  workflow.py  workflow_scheduler.py
dashboard/agents/: __init__.py  hermes_agent.py  opencode_agent.py  protocol.py  reviewer.py  (+2 more)
docs/: MIGRATION_MAP.md  README.md
sandbox/: .gitignore  Dockerfile.base  README.md  VALIDATION.md  docker-compose.sandbox.yml
scripts/: check-sandboxes.sh  check-worktrees.sh  cleanup-worktrees.sh  release.sh  sync-memory.sh  validate-workflow.sh
specs/: architecture.md  protocol.md  sandbox.md  workflow.md  workflow.schema.json  workflow.yaml
tests/: test_async_chat_store.py  test_issue_65_comprehensive.py  test_issue_65_final.py  test_issue_65_quick.py  test_rate_limiting.py  test_rate_limiting_issue_65.py  test_rate_limiting_issue_65.sh
(+188 files in other folders)
