[project]
name = "agentic-software-boutique"
description = "Dashboard for Twitter/X data export tools"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [
    "dashboard/tests",
    "tests",
]
python_files = ["test_*.py"]
